--- a/2015/01/problem.org
+++ b/2015/01/problem.org
@@ -1,6 +1,6 @@
 * advent of code 2015 01
 
-** part one
+** --- Part One ---
 
 Santa is trying to deliver presents in a large apartment building, but he can't find the right floor - the directions he got are a little confusing. He starts on the ground floor (floor 0) and then follows the instructions one character at a time.
 
@@ -22,4 +22,21 @@ To what floor do the instructions take Santa?
 
 To begin, get your puzzle input.
 
-Answer: 
+Answer: Your puzzle answer was 138.
+
+The first half of this puzzle is complete! It provides one gold star: *
+
+** --- Part Two ---
+
+Now, given the same instructions, find the position of the first character that causes him to enter the basement (floor -1). The first character in the instructions has position 1, the second character has position 2, and so on.
+
+For example:
+
+    ) causes him to enter the basement at character position 1.
+    ()()) causes him to enter the basement at character position 5.
+
+What is the position of the character that causes Santa to first enter the basement?
+
+Answer: 1771
+
+Correct.
