--- a/2015/07/problem.org
+++ b/2015/07/problem.org
@@ -45,7 +45,10 @@ In little Bobby's kit's instructions booklet (provided as your puzzle input), wh
 
 To begin, get your puzzle input.
 
-Answer:
+Answer: 16076 correct
 
 ** --- Part Two ---
 
+Now, take the signal you got on wire a, override wire b to that signal, and reset the other wires (including wire a). What new signal is ultimately provided to wire a?
+
+Answer: 2797 correct.
